--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./13.机器人的运动范围.js"></script>
+ <script src="./21. 调整数组顺序使奇数位于偶数前面.js"></script>
 </body>
 </html>
